tests/snapshots/run_wpt_conformance__coreml_greater_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater int32 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: compiler error: Error reading protobuf spec. validator error: unable to deserialize object

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: i32[1, 2, 2, 3];
    inputB: i32[1, 2, 2, 3];
  }

  nodes {
    [output] = greater(inputA, inputB, label="");
  }

  outputs { output; }
}
