tests/snapshots/run_wpt_conformance__coreml_hardSigmoid_float32_positive_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
hard_sigmoid.https.any.js hardSigmoid float32 positive 5D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'hardSigmoidInput' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    hardSigmoidInput: f32[1, 2, 1, 3, 4];
  }

  nodes {
    [hardSigmoidOutput] = hardSigmoid(hardSigmoidInput, alpha=0.2, beta=0.5, label="");
  }

  outputs { hardSigmoidOutput; }
}
