tests/snapshots/run_wpt_conformance__coreml_hardSwish_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
hard_swish.https.any.js hardSwish float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983289068_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([224, 57, 143, 72, 23, 67, 62, 65, 114, 198, 188, 190, 134, 69, 245, 197, 150, 200, 108, 70, 150, 194, 42, 60, 63, 199, 148, 187, 199, 197, 95, 66, 67, 199, 45, 68, 143, 67, 18, 198, 244, 200, 191, 199, 37, 200, 11, 72]);
  }

  nodes {
    [hardSwishOutput] = hardSwish(operand_0, label="");
  }

  outputs { hardSwishOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
