tests/snapshots/run_wpt_conformance__coreml_hardSwish_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
hard_swish.https.any.js hardSwish float32 3D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'hardSwishInput' must be of rank 4, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    hardSwishInput: f32[2, 3, 4];
  }

  nodes {
    [hardSwishOutput] = hardSwish(hardSwishInput, label="");
  }

  outputs { hardSwishOutput; }
}
