tests/snapshots/run_wpt_conformance__coreml_identity_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
identity.https.any.js identity float16 3D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'identityInput' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    identityInput: f16[2, 3, 4];
  }

  nodes {
    [identityOutput] = identity(identityInput, label="");
  }

  outputs { identityOutput; }
}
E5RT encountered an STL exception. msg = No OperationBuilder in this Block produces output identityInput..
