tests/snapshots/run_wpt_conformance__coreml_instanceNormalization_float32_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float32 4D tensor all options, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 2-byte elements (code 65552), but input is Float32 (4-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f32[2, 2, 2, 3];
  }

  consts {
    operand_0: f32[3] @bytes([207, 49, 4, 194, 149, 93, 144, 64, 164, 190, 23, 194]);
    operand_2: f32[3] @bytes([255, 218, 188, 194, 117, 100, 133, 66, 167, 33, 197, 194]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=1e-6, label="", layout="nhwc", scale=2);
  }

  outputs { instanceNormOutput; }
}
